<resources>
    <string name="app_name">Delvis</string>

    <string name="intro_1_text">Order Groceries, Drinks and Products from your nearest Retail-Shops, Grocery and Supermarket</string>
    <string name="btn_text_next">Next</string>
    <string name="btn_text_finish">Finish</string>
    <string name="intro_2_text">We will deliver your Goods straight to your destination/home.</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_sign_up">Sign Up</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="shared_pref_intro_displayed">intro_displayed</string>
    <string name="btn_set_location">Set Location</string>
    <string name="text_set_location_information">Lets get started by setting a delivery address</string>
    <string name="menu_search">Search Address</string>
    <string name="search_hint">Location Address</string>
    <string name="shared_pref_location_set">delivery-location-set</string>
    <string name="menu_products">Products</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_cart">Cart</string>
    <string name="category_supermarket">Supermarket</string>
    <string name="category_pharmacy">Pharmacy</string>
    <string name="category_drinks">Drinks</string>
    <string name="category_groceries">Groceries</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="category_gas">Gas</string>
    <string name="menu_home">Home</string>
    <string name="menu_search_in_drinks">Search in Drinks…</string>
    <string name="product_whiskey">Whiskey</string>


</resources>
